force-app/main/default/objects/Book__c/fields/Number_of_Books_Available__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Books_Available__c</fullName>
    <description>Number of books available for loan</description>
    <label>Number of Books Available</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>