force-app/main/default/objects/Book__c/fields/Number_of_Books_Loaned_Out__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Books_Loaned_Out__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of books currently loaned out</description>
    <label>Number of Books Loaned Out</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>